# newsense

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.standalone.yml  docker-compose.yml
auth/: Cargo.toml
auth/src/: main.rs
fetcher/: Cargo.toml
fetcher/src/: main.rs
services/aggregator/: Cargo.toml  Dockerfile
services/aggregator/.sqlx/: query-001c2755df88e9042328364b9e532f37043a3378aae9b505f86e062229c3333d.json  query-0461e3be917c0779c1e8f3aac6909ba26eab9ddae51a638abbe09c6ed5b59d2f.json  query-0acc903685e7e9a55f80c5236510cfb67ad0d9385cf48f6c3741153c568c79f4.json  query-0e5b990786701cee61cf0c7046f57fbfa25ca1bda2fd78e8a75a22a94e165cae.json  query-16f3ed7ec081b40364202df53428764c58e8665a91e8103151ee5eeb98ee86b6.json  query-17ef67934bcbb09d99e20bf4fa619292894a9d5358171eefc7e4caacdd08e8f6.json  query-1b2d2bc103852b81221276d7da66f9f41f5734318e7d5eb7f84d66530483fc4e.json  query-1bcbadb15c6c71333282a7dcf52e38b6bfca3e0499b7a44d459c1b928ca2f42b.json  query-1d8f52f158fa75bf681a75f85401823789cf82aec7c71f227faa97af23446608.json  query-1fcdf117dee8a4463d742b18138f5de8c05216fe17143f2af260b5f960df0981.json  query-26dc88393d3d1325288bdecd2103e66a029c6f2c7ea59bf854b15ede7d0cd666.json  query-28477c2f9f7c969b21ee590cd4417a1ae80c2b2413155f2b8005630e25648b21.json  query-2dbc01b9d5dc0c3cbfd6abe17715da8618be9b4801c7e1e364f7c346f0003a57.json  query-2e3f58dac66d76a3c80faa78702c7c80ee72a9033fd36665247ac63af2105501.json  query-3334a60db12e6a7a2c1a4b7f222cec46bcd2cea274c2bd7f7ec6eee78f6fe37f.json  query-36990a52cfc4d80e63c16d8d739758fbaff8c4c15f70ebbf98e1abed741493b3.json  query-3af02cc5f94c7e7837b7c0fc30fe19d26ba1df4b53b7983b029f5177b7decea7.json  query-3fb9a67f45d9a3ef0f3257be969bb5a82b4b06dab1a9ccec8ea66a9bf735f215.json  query-4037fbd40799b89909e1650fca0645e92e1bb0300eb792fa99068ac0027e2fb6.json  query-40b436c720119ea4cc945eb032f0db96071463bd6d4b04b187ae65d6acb6830e.json  query-4649e58551026013dec269fc0b46107b3f45d66c987adb8a1f3e073aebcb5fe0.json  query-4654a4346a1b18682119b3cd5b2844c68194fe6220b4c20980f981738e3002a4.json  query-4ee95476ae76a831a0384dd01bbd4ebfa3871de4b5e2b31475c8aec6336e6bbd.json  query-516464bf833dfbad0117ebe1ebc9f31bbf1cfbd777378f94ac7c818767bccf6f.json  query-5233ce97983af09bc13aa9c0a74e7913ca688539e5f209dc85a07fde86a8a82d.json  query-523c335175f9f908096e1e508029144d711e54462a17f044f800ca5ef9df8127.json  query-56f09393cfd8442564fb4d788636850f381d6840025929e060e5bd6bfe8a8d61.json  query-574762f315fc4fc6bd462c5a08e46cb5e99d1bd2114a65cab53303ace5788aaa.json  query-592e50ade7c7fed2d0be3b115eeae0520bca0914be0a8506c3512e99c93b2f3b.json  query-5af3e27b0a2f1a3dd6daf0065a03f6caa1dffa2597cb39050a624b8800a3e90d.json  query-5bf62f82bdf5447ce6d8873554248b6c5e82e6371d50b632c7f18233dc7576bb.json  query-61790b1cadf865841ca19aaf79902cc29fe19e3250bed2a728871d02a10d2391.json  query-64e89573b41bdddff48b00c0a9ff9663c4c67dc4355b3b6820a8cec73878ed4b.json  query-68829fa494c2f390aea2fb64d039388e0960c81fc876517f183169164f7d2751.json  query-6a0bd8754fe152071aa2741b081ce12513dc6b8f09b383f491d75990428545ca.json  query-6e3f3c9000e762ee9504d79e487839951ff880b55f1023e61b1b3d46430912cb.json  query-7a2b88fa4e58f39d5ca9f3612d3a59daa053d57d188743ef46dc3908560e7f80.json  query-7cc794335e86491ec1708cb2bc40b82d2e9a33def13294bbf23ca56c58cf541c.json  query-7dc22d1c444c01fcedc42f177374e83a8f4dbe395438b48b9de4f4344367c8c7.json  query-7ef3190182548b002b31f2b3afc781f1675247b7656de40ace39d1d7a87d0e27.json  (+20 more)
services/aggregator/src/: auth.rs  handlers.rs  main.rs  (+3 more)
services/auth/: Cargo.toml  Dockerfile
services/embeddings/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  analyze_dataset.py  backfill.py  check_distance.py  clustering.py  config.py  export_training_data.py  inspect_clusters.py  main.py  migrate_db.py  pyproject.toml  train_preference_model.py  training_utils.py
(+92 files in other folders)
