[package]
name = "newsense-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-sessions = "0.13"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
