[package]
name = "newsense-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

