[package]
name = "fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
feed-rs = "2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
serde = "1.0.228"
axum = "0.8.8"
