[package]
name = "users"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum_csrf = { version = "0.11.0", features = ["layer"] }
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tower_governor = "0.8.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

