[package]
name = "newsense-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.7"
axum-extra = { version = "0.12.5", features = ["cookie"] }
axum_csrf = { version = "0.11.0", features = ["layer"] }
base64 = "0.22.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tower_governor = "0.8.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

