[project]
name = "newsense-embed"
version = "0.1.0"
description = "A service for Newsense to make embeddings for articles and cluster them"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]
