[project]
name = "newsense-embeddings"
version = "0.0.0"
description = "A service for Newsense to make embeddings for articles and cluster them"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "numpy>=2.0.0",
    "optimum[onnxruntime]>=2.1.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "spacy>=3.8.11",
    "tqdm>=4.66.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
